--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,13 +33,13 @@ jobs:
             mkdir output
             cp -r src output/
             cp package.json output
-            zip -r output.zip output
+            zip -r build.zip output
 
         - name: Upload artifact
-          uses: actions/upload-artifact@v2
+          uses: actions/upload-artifact@v4
           with:
-            name: output-zip
-            path: output.zip
+            name: build-zip
+            path: build.zip
            
           
     
