--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,20 @@ jobs:
             path: build.zip
            
           
-    
+        - name: Notify Success via Email
+          if: success()
+          uses: dawidd6/action-send-mail@v3
+          with:
+           server_address: smtp.gmail.com
+           server_port: 587
+           username: your_email@gmail.com
+           password: zozs zxgm wofs fkqn
+           subject: "✅ CI Build Success - ${{ github.repository }}"
+           body: |
+            The build for ${{ github.repository }} on branch ${{ github.ref_name }} succeeded.
+            Commit: ${{ github.sha }}
+           to: nikhil89041@gmail.com
+           from: awsmine12345@gmail.com
+
         
          
